--- a/src/ui/tmpl/admin/includes/album.twig
+++ b/src/ui/tmpl/admin/includes/album.twig
@@ -4,7 +4,7 @@
             {% if album.coverItem %}
             <img
                 class="media-object"
-                src="{{ album.coverItem.sizes.sq150.url ?: album.coverItem.url }}"
+                src="{{ album.coverItem.sizes.SQ150.url ?: album.coverItem.url }}"
                 title="{{ album.title }}"
                 alt="{{ album.title }}"/>
             {% else %}
