--- a/src/ui/css/style.css
+++ b/src/ui/css/style.css
@@ -88,6 +88,9 @@ a, a:hover, a:visited {
     color: #ddd;
     margin:0
 }
+#admin header a.btn-link {
+    color: white;
+}
 #admin section {
     margin-top: 16px;
 }
@@ -95,7 +98,9 @@ a, a:hover, a:visited {
     margin-top: -6px;
 }
 #admin section .album .media-object {
+    object-fit: cover;
     width: 150px;
+    height: 150px;
 }
 #admin section .album .info {
     position: relative;
@@ -152,14 +157,12 @@ a, a:hover, a:visited {
     text-shadow: 0 0 4px #000;
 }
 #set .thumbs img {
-    -moz-transition: all 0.3s;
-    -webkit-transition: all 0.3s;
-    transition: all 0.3s;
+    -moz-transition: all 0.2s;
+    -webkit-transition: all 0.2s;
+    transition: all 0.2s;
 }
 #set .thumbs img:hover, #set .thumbs img.hover {
-    -moz-transform: scale(1.05);
-    -webkit-transform: scale(1.05);
-    transform: scale(1.05);
+    transform: scale(1.01);
 }
 
 /* viewbox */
