--- a/src/ui/tmpl/admin/admin.twig
+++ b/src/ui/tmpl/admin/admin.twig
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block contents %}
-    <div id="admin">
+    <div>
         {% include 'admin/includes/navbar.twig' %}
         <section class="col-xs-12">
             <div class="row">
@@ -13,23 +13,23 @@
                     <div class="provider col-xs-12 col-sm-6">
                         <div class="panel panel-default">
                             <div class="panel-heading">
-                            <span class="pull-right provider-tools">
-                                {% if provider.authenticated %}
-                                    <div class="btn-group btn-group-sm">
-                                        <a href="{{ url_for('import_validate', { 'provider': key }) }}" class="btn btn-default" title="Impordi albumid">
-                                            <i class="glyphicon glyphicon-save"></i> Impordi albumid
+                                <span class="pull-right provider-tools">
+                                    {% if provider.authenticated %}
+                                        <div class="btn-group btn-group-sm">
+                                            <a href="{{ url_for('import_validate', { 'provider': key }) }}" class="btn btn-default" title="Impordi albumid">
+                                                <i class="glyphicon glyphicon-save"></i> Impordi albumid
+                                            </a>
+                                            <a href="{{ url_for('provider_logout', { 'provider': key }) }}" title="Log out" class="btn btn-danger">
+                                                <i class="glyphicon glyphicon-off"></i>
+                                            </a>
+                                        </div>
+                                    {% else %}
+                                        <a href="{{ url_for('provider_login', { 'provider': key }) }}" title="Log in" class="btn btn-link btn-sm">
+                                            Autoriseeri
+                                            <i class="glyphicon glyphicon-log-in"></i>
                                         </a>
-                                        <a href="{{ url_for('provider_logout', { 'provider': key }) }}" title="Log out" class="btn btn-danger">
-                                            <i class="glyphicon glyphicon-off"></i>
-                                        </a>
-                                    </div>
-                                {% else %}
-                                    <a href="{{ url_for('provider_login', { 'provider': key }) }}" title="Log in" class="btn btn-link btn-sm">
-                                        Autoriseeri
-                                        <i class="glyphicon glyphicon-log-in"></i>
-                                    </a>
-                                {% endif %}
-                            </span>
+                                    {% endif %}
+                                </span>
                                 <h2 class="panel-title">{{ provider.label }}</h2>
                             </div>
                             <div class="panel-body">
@@ -55,5 +55,6 @@
 {% block scripts %}
     <script src="{{ base_url }}/ui/lib/jQuery-File-Upload-9.12.1/js/vendor/jquery.ui.widget.js" type="text/javascript"></script>
     <script src="{{ base_url }}/ui/lib/jQuery-File-Upload-9.12.1/js/jquery.fileupload.js" type="text/javascript"></script>
+    <script src="{{ base_url }}/ui/js/imgerror.js" type="text/javascript"></script>
     <script src="{{ base_url }}/ui/js/admin.js" type="text/javascript"></script>
 {% endblock %}
