--- a/src/ui/css/style.css
+++ b/src/ui/css/style.css
@@ -267,12 +267,21 @@ a, a:hover, a:visited {
     backdrop-filter: blur(10px);
     text-align: center;
 }
-#editor .viewbox i {
-    float: right;
-    padding: 4px;
-    font-size: 2.5rem;
-    color: #FFFFFF90;
+#editor .img-toolbar {
+    position: absolute;
+    top: 10px;
+    right: 10px;
 }
-#editor .viewbox i.active {
+#editor .img-toolbar .cover.active {
     color: #f0ad4e;
+}
+#editor .img-toolbar .dropdown-menu li {
+    position: relative;
+}
+#editor .img-toolbar .dropdown-menu li img {
+    float: right;
+    margin-top: -22px;
+    color: #666666;
+    margin-right: 3px;
+    opacity: 0.2;
 }
