--- a/src/ui/tmpl/admin/album.twig
+++ b/src/ui/tmpl/admin/album.twig
@@ -30,25 +30,47 @@
     <section>
         <div class="thumbs">
             {% for photo in items %}
-                <a data-id="{{ photo.id }}" data-fid="{{ photo.fid }}" class="viewbox" href="{{ url_for('provider_item', { 'provider': provider.id, 'album': album.id, 'item': photo.id }) }}">
-                    <img class="lazy"
-                         data-original="{{ photo.sizes.M800.url }}"
-                         data-vb-src="{{ photo.sizes.L2048.url }}"
-                         data-vb-w="{{ photo.sizes.L2048.width }}"
-                         data-vb-h="{{ photo.sizes.L2048.height }}"
-                         data-img-link="{{ url_for('item', { 'album': album.id, 'item': photo.id }) }}"
-                         data-img-download="{{ url_for('download', { 'album': album.id, 'item': photo.id }) }}"
-                         width="{{ photo.sizes.S320.width }}"
-                         height="{{ photo.sizes.S320.height }}"
-                         alt="{{ photo.title ?: photo.id }}"
-                         src="{{ placeholder(photo.sizes.S320.width, photo.sizes.S320.height, photo.title ?: photo.id) }}"
-                         onerror="imgerror(this)"
-                    />
-                    <div class="caption" contenteditable="true" tabindex="{{ loop.index + 1 }}">
+                <div class="viewbox">
+                    <a class="thumb" data-id="{{ photo.id }}" data-fid="{{ photo.fid }}" href="{{ url_for('provider_item', { 'provider': provider.id, 'album': album.id, 'item': photo.id }) }}">
+                        <img class="lazy"
+                             data-original="{{ photo.sizes.M800.url }}"
+                             data-vb-src="{{ photo.sizes.L2048.url }}"
+                             data-vb-w="{{ photo.sizes.L2048.width }}"
+                             data-vb-h="{{ photo.sizes.L2048.height }}"
+                             data-img-link="{{ url_for('item', { 'album': album.id, 'item': photo.id }) }}"
+                             data-img-download="{{ url_for('download', { 'album': album.id, 'item': photo.id }) }}"
+                             width="{{ photo.sizes.S320.width }}"
+                             height="{{ photo.sizes.S320.height }}"
+                             alt="{{ photo.title ?: photo.id }}"
+                             src="{{ placeholder(photo.sizes.S320.width, photo.sizes.S320.height, photo.title ?: photo.id) }}"
+                             onerror="imgerror(this)"
+                        />
+                    </a>
+                    <div class="caption" contenteditable="true" data-id="{{ photo.id }}" data-fid="{{ photo.fid }}" tabindex="{{ loop.index + 1 }}">
                         {{ photo.title }}
                     </div>
-                    <i class="glyphicon glyphicon-star {{ photo.id == album.coverItem.id ? 'active' : '' }}"></i>
-                </a>
+                    <div class="btn-group img-toolbar">
+                        <a href="#" data-id="{{ photo.id }}" data-fid="{{ photo.fid }}" class="btn btn-default cover {{ photo.id == album.coverItem.id ? 'active' : '' }}">
+                            <i class="glyphicon glyphicon-star"></i>
+                        </a>
+                        <button type="button" class="btn btn-default dropdown-toggle" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenu1">
+                            {% for key, size in photo.sizes %}
+                            <li>
+                                <a href="{{ size.url }}" class="copy">{{ key }} ({{ size.width }}x{{ size.height }})</a>
+                                <img src="{{ base_url }}/ui/img/copy.svg" />
+                            </li>
+                            {% endfor %}
+                            <li role="separator" class="divider"></li>
+                            <li>
+                                <a href="{{ photo.url }}" class="copy">Originaal ({{ photo.width }}x{{ photo.height }})</a>
+                                <img src="{{ base_url }}/ui/img/copy.svg" />
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             {% endfor %}
         </div>
     </section>
@@ -92,6 +114,7 @@
             album: '{{ url_for('provider_album', { 'provider': provider.id, 'album': album.id }) }}',
         }
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
     <script src="{{ base_url }}/ui/lib/jquery/jquery.lazyload.min.js" type="text/javascript"></script>
     <script src="{{ base_url }}/ui/lib/justifiedGallery.min/jquery.justifiedGallery.min.js" type="text/javascript"></script>
     <script src="{{ base_url }}/ui/js/imgerror.js" type="text/javascript"></script>
