--- a/src/ui/tmpl/admin/admin.twig
+++ b/src/ui/tmpl/admin/admin.twig
@@ -56,5 +56,6 @@
     <script src="{{ base_url }}/ui/lib/jQuery-File-Upload-9.12.1/js/vendor/jquery.ui.widget.js" type="text/javascript"></script>
     <script src="{{ base_url }}/ui/lib/jQuery-File-Upload-9.12.1/js/jquery.fileupload.js" type="text/javascript"></script>
     <script src="{{ base_url }}/ui/js/imgerror.js" type="text/javascript"></script>
+    <script src="{{ base_url }}/ui/js/maintainscroll.js" type="text/javascript"></script>
     <script src="{{ base_url }}/ui/js/admin.js" type="text/javascript"></script>
 {% endblock %}
