Save state because computer change, might be broken.

--- a/src/ui/tmpl/admin/includes/navbar.twig
+++ b/src/ui/tmpl/admin/includes/navbar.twig
@@ -4,7 +4,7 @@
     </div>
     <div class="col-xs-6 text-right">
         <div class="btn-group">
-            <a href="{{ url_for('api') }}" class="btn btn-link">
+            <a href="{{ url_for('api') }}" class="btn btn-link" target="_blank">
                 API
             </a>
             <a href="{{ url_for('logout') }}" class="btn btn-link">
